--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -19,6 +19,18 @@
   <div id="map" style="width:100%;height:100vh;"></div>
   <script type="text/javascript" src="/data/data.js"></script>
   <script>
+
+    $.ajax({
+    url:"http://localhost:3000/liquors/",
+    type:"GET",
+    success: function(result) {
+        if (result) {
+            alert("ss");
+        } else {
+            alert("불러오기 실패");
+        }
+    }
+});
   var mapOptions = {
       center: new naver.maps.LatLng(37.531471, 126.979514),
       zoom: 10
@@ -51,7 +63,7 @@
           <div class='infowindow_title'>${target.title}</div>
           <div class='infowindow_content'>👉 ${target.content}</div>
           <div class='infowindow_more'>
-            <a href="${target.more}" title="인스타그램에서 더 확인하기">
+            <a href="${target.more}" title="인스타그램에서 더 확인하기" target="_blank">
               <div class='infowindow_more_icon'>
                 <img src="/images/more_icon.png" width=32 hdight=32>
               </div>
