--- a/travelOntheMap/public/stylesheets/style.css
+++ b/travelOntheMap/public/stylesheets/style.css
@@ -92,3 +92,24 @@ body {
   padding-top : 3px;
   padding-bottom : 3px;
 }
+
+#loading {
+  width: 100%;  
+  height: 100%;  
+  top: 0px;
+  left: 0px;
+  position: fixed;  
+  display: block;  
+  opacity: 0.7;  
+  background-color: #fff;  
+  z-index: 10000;  
+  text-align: center; 
+} 
+   
+ #loading-image {  
+  position: absolute;  
+  top: 50%;  
+  left: 50%; 
+  z-index: 100; 
+}
+ 
