ajax데이터 url변경

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -36,7 +36,7 @@
   var dataList;
 
   $.ajax({
-    url : "http://172.20.10.3:3000/register", // test.jsp 에서 받아옴
+    url : "https://itjusttravel.herokuapp.com/register", // test.jsp 에서 받아옴
     dataType :"json", // 데이터타입을 json 으로 받아옴
     success : function(data) {
         // alert("data로딩이 완료되었습니다.")
