--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -40,8 +40,8 @@
   var dataList;
 
   $.ajax({
-    // url : "https://itjusttravel.herokuapp.com/register", // test.jsp 에서 받아옴
-    url : "http://localhost:3000/register",
+    url : "https://itjusttravel.herokuapp.com/register", // test.jsp 에서 받아옴
+    // url : "http://localhost:3000/register",
     dataType :"json", // 데이터타입을 json 으로 받아옴
     success : function(data) {
         // alert("data로딩이 완료되었습니다.")
