--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -13,15 +13,12 @@
 </head>
 <body>
   <div id="navbar">랜섬<br>여행</div>
-  <div id="infoBox">
-    <div id="infoTitle"></div>
-    <div id="infoContent">모든 정보는</div>
-  </div>
+  <div id="infoBox">베타버전<br>입니다.</div>
 
-  <div id="current">현재 위치</div>
+  <div id="current"><img src="/images/nowLocation1.png" height="30px" width="30px"/> NOW</div>
 
   <div id="loading">
-    <!-- <img id="loading-image" src="https://i.postimg.cc/7hbZdqXX/image.jpg" alt="데이터 로딩 중입니다" /> -->
+    <img id="loading-image" src="/images/loading.gif" alt="데이터 로딩 중입니다" />
     데이터 로딩 중입니다! 잠시만 기다려주세요
   </div>
   <div id="map" style="width:100%;height:100vh;"></div>
@@ -39,25 +36,27 @@
   var infowindowList = [];
   var dataList;
 
+  // $(window).load(function() {    
+  //         $('#loading').hide();  
+  // });
+
+
+
   $.ajax({
     url : "https://itjusttravel.herokuapp.com/register", // test.jsp 에서 받아옴
     // url : "http://localhost:3000/register",
     dataType :"json", // 데이터타입을 json 으로 받아옴
     success : function(data) {
         // alert("data로딩이 완료되었습니다.")
-        console.log("전>>>",data[0].lat)
         dataList = data;
-        setContent();
+        setContent(); 
+        $('#loading').hide();  
     },
     error : function(e) {
         console.log(e.responseText);
-        alert(e)
+        console.log(e);
     }
   })
-
-  $(window).load(function() {    
-      $('#loading').hide();  
-  });
 
   var setContent = function() {
     for(var target of dataList){
