수정날짜 추가

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div id="navbar">랜섬<br>여행</div>
-  <div id="infoBox">베타버전<br>입니다.</div>
+  <div id="infoBox">베타버전<br>입니다.<br>최종수정일자<br>7.22/2시 31분</div>
 
   <div id="current"><img src="/images/nowLocation1.png" height="30px" width="30px"/> NOW</div>
 
