구글 애널리틱스 추가

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -11,11 +11,19 @@
     <link rel = "stylesheet" href="/stylesheets/style.css">
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=9mlra4rwwq"></script>
     <script type="text/javascript" src="/src/MarkerClustering.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173208515-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-173208515-1');
+    </script>
 </head>
 <body>
   <div id="navbar">랜섬<br>여행</div>
-  <div id="infoBox">베타버전<br>최종수정일자<br>7.22/15:01</div>
+  <div id="infoBox">베타버전<br>최종수정일자<br>7.22/16:06</div>
 
   <div id="current"><img src="/images/nowLocation1.png" height="30px" width="30px"/> NOW</div>
 
