라우터 이름 정리 수정 삭제 버튼 추가

--- a/travelOntheMap/public/stylesheets/style.css
+++ b/travelOntheMap/public/stylesheets/style.css
@@ -283,7 +283,7 @@ body, html {
   width : 252px;
   background-color: white;
   color: burlywood;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-radius: 15px;
+  /* border-bottom-right-radius: 15px; */
   text-align: center;
 }
