수정내용 업데이트

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div id="navbar">랜섬<br>여행</div>
-  <div id="infoBox">베타버전<br>최종수정일자<br>7.24/03:39</div>
+  <div id="infoBox">베타버전<br>최종수정내용<br>데이터에디터추가</div>
 
   <div id="current"><img src="/images/nowLocation1.png" height="30px" width="30px"/><br></div>
 
