공유버튼 추가

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="/src/MarkerClustering.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173208515-1"></script>
-    <script>
+    <script>ㄹㄹ
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
@@ -53,8 +53,8 @@
 
 
   $.ajax({
-    url : "https://itjusttravel.herokuapp.com/file", // test.jsp 에서 받아옴
-    // url : "http://localhost:3000/file",
+    // url : "https://itjusttravel.herokuapp.com/file", // test.jsp 에서 받아옴
+    url : "http://localhost:3000/file",
     dataType :"json", // 데이터타입을 json 으로 받아옴
     success : function(data) {
         // alert("data로딩이 완료되었습니다.")
@@ -245,5 +245,8 @@
 
 
   </script>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f1d32cdaba5b518"></script>
+
 </body>
 </html>
