--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>여행을 가고 싶어서 만드는 중</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../public/images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/images/favicon.ico">
+    <link rel="shortcut icon" href="https://i.postimg.cc/d061bMYv/favicon-1.png" type="image/x-icon">
+    <link rel="icon" href="https://i.postimg.cc/d061bMYv/favicon-1.png" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
