--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -9,6 +9,13 @@
 
     <div class="mylistcard"></div>
     <script>
+        var urlAdd = "http://localhost:3000/"  
+        if(!window.location.href === "http://localhost:3000/mylist"){
+            urlAdd = "https://itjusttravel.herokuapp.com/"
+        }
+        console.log(window.location.href)
+
+
         var output = localStorage.getItem("key");		
         var myListArr = JSON.parse(output);
 
@@ -18,8 +25,9 @@
         var htmlData = "";
 
         $.ajax({
-            url : "https://itjusttravel.herokuapp.com/file", // test.jsp 에서 받아옴
-            // url : "http://localhost:3000/file",
+            // url : "https://itjusttravel.herokuapp.com/file", // test.jsp 에서 받아옴
+            // // url : "http://localhost:3000/file",
+            url :  urlAdd + 'file',
             dataType :"json", // 데이터타입을 json 으로 받아옴
             success : function(data) {
                 // alert("data로딩이 완료되었습니다.")
