--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -3,5 +3,10 @@
 7/26.공유기능 추가<br>
 7/26.나의 여행 기능 추가 - 여행지 기록가능 (수정 중)<br>
 7/26.현재위치 이미지 및 위치 변경<br>
+7/27.나의 여행지 기능 수정중<br>
+7/27.save me show me버튼 제거<br>
+7/27.url자동 수정, 로컬 or Others<br>
+7/27.나의 여행지 삭제기능 추가<br>
 7/27.<br>
-7/27.<br>
+
+
