--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -38,10 +38,9 @@
   <div id="map" style="width:100%;height:100vh;"></div>
   <!-- <script type="text/javascript" src="/data/data.js"></script> -->
   <script>
-    var urlAdd = "http://localhost:3000/"  
-    if(!window.location.href === "http://localhost:3000/"){
-      urlAdd = "https://itjusttravel.herokuapp.com/"
-    }
+    // var urlAdd = "http://localhost:3000/"  
+    var urlAdd = "https://itjusttravel.herokuapp.com/"
+
 
   var mapOptions = {
       center: new naver.maps.LatLng(37.531471, 126.979514),
