--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -9,10 +9,9 @@
 
     <div class="mylistcard"></div>
     <script>
-        var urlAdd = "http://localhost:3000/"  
-        if(!window.location.href === "http://localhost:3000/mylist"){
-            urlAdd = "https://itjusttravel.herokuapp.com/"
-        }
+        // var urlAdd = "http://localhost:3000/"  
+
+        var urlAdd = "https://itjusttravel.herokuapp.com/"
         console.log(window.location.href)
 
 
